fixed bug in menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="cabecalho">
         <div class="cabecalho-container">
-            <a href="#"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
+            <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primaria" class="cabecalho-navegacao">
                 <ul class="cabecalho-navegacao-lista">
                         <li class="cabecalho-navegacao-lista-item"><a href="#" class="cabecalho-navegacao-lista-item-botao">Bicicletas</a></li>
