--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             </nav>
         </div>
     </header>
+    <main class="introducao-container">
+        <div class="introducao">
+            <div class="introducao-conteudo">
+                <h1 class="introducao-titulo">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="introducao-paragrafo">
+                    Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.
+                </p>
+                <a href="bicicletas.html" class="botao">Escolha a sua</a>
+            </div>
+            <div class="introducao-imagem">
+                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta.">
+            </div>
+        </div>
+    </main>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
