added bike list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <div class="cabecalho-container">
+        <div class="cabecalho-container container">
             <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primaria" class="cabecalho-navegacao">
                 <ul class="cabecalho-navegacao-lista">
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main class="introducao-container">
-        <div class="introducao">
+        <div class="introducao container">
             <div class="introducao-conteudo">
                 <h1 class="introducao-titulo font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
                 <p class="introducao-paragrafo font-2-l">
@@ -34,6 +34,32 @@
             </div>
         </div>
     </main>
+    <article class="bicicletas-lista">
+        <h2 class="bicicletas-lista-titulo font-1-xxl container">escolha a sua<span class="span-cp001">.</span></h2>
+        <ul>
+            <li>
+                <a href="./bicicletas/magic.html">
+                    <img src="images/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m span-c008">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/nimbus.html">
+                    <img src="images/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m span-c008">R$ 4999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/nebula.html">
+                    <img src="images/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
+                    <span class="font-2-m span-c008">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
