--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
             </li>
         </ul>
     </article>
+    <article class="tecnologias-container">
+        <div class="tecnologias container">
+            <div class="tecnologias-conteudo">
+                <span class="font-2-l-b ">Tecnologia avançada</span>
+                <h2 class="font-1-xxl">Você escolhe as suas cores e componentes<span>.</span></h2>
+                <p class="font-2-l">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                <a class="link" href="./bicicletas.html">Escolha o modelo</a>
+                <div class="tecnologias-vantagens">
+                    <div>
+                        <img src="./images/icones/eletrica.svg" alt="">
+                        <h3 class="font-1-m">Motor elétrico</h3>
+                        <p class="font-2-s">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                    </div>
+                    <div>
+                        <img src="./images/icones/rastreador.svg" alt="">
+                        <h3>Rastreador</h3>
+                        <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="tecnologias-imagem">
+                <img src="images/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+
+    </article>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
