--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
         </div>
 
     </article>
+    <section class="parceiros" aria-label="Nossos Parceiros">
+        <h2 class="bicicletas-lista-titulo font-1-xxl container">nossos parceiros<span class="span-cp001">.</span></h2>
+        <ul>
+            <li><img src="./images/parceiros/caravan.svg" alt="Caravan"></li>
+            <li><img src="./images/parceiros/ranek.svg" alt="Ranek"></li>
+            <li><img src="./images/parceiros/handel.svg" alt="Handel"></li>
+            <li><img src="./images/parceiros/dogs.svg" alt="Dogs"></li>
+            <li><img src="./images/parceiros/lescone.svg" alt="Lescone"></li>
+            <li><img src="./images/parceiros/flexblog.svg" alt="FlexBlog"></li>
+            <li><img src="./images/parceiros/wildbeast.svg" alt="WildBeast"></li>
+            <li><img src="./images/parceiros/surfbot.svg" alt="Surfbot"></li>
+        </ul>
+    </section>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
