--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
             <li><img src="./images/parceiros/surfbot.svg" alt="Surfbot"></li>
         </ul>
     </section>
+    <section class="depoimento" aria-label="Depoimento">
+        <div>
+            <img src="images/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+        </div>
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl">
+                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+                <span class="font-1-m-b">Ana Júlia</span>
+            </blockquote>
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
