--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
             </blockquote>
         </div>
     </section>
+    <article class="seguros-container">
+        <div class="seguros container">
+            <h2 class="font-1-xxl">seguros<span>.</span></h2>
+            <div class="seguros-item">
+                <h3 class="prata font-1-xl">PRATA</h3>
+                <span class="font-1-xl">R$ 199 <span class="font-1-xs">mensal</span></span>
+                <ul class="font-2-m">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+            </div>
+            <div class="seguros-item">
+                <h3 class="ouro font-1-xl">OURO</h3>
+                <span class="font-1-xl">R$ 299 <span class="font-1-xs">mensal</span></span>
+                <ul class="font-2-m">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a class="botao" href="./orcamento.html">Inscreva-se</a>
+            </div>
+        </div>
+    </article>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
