--- a/termos.html
+++ b/termos.html
@@ -22,11 +22,22 @@
     </header>
 
     <main>
-        <div class="titulos-container">
+        <div class="titulo-bg">
             <div class="titulo container">
-                <p class="font-2-l-b">Termos de uso</p>
-                <h1>Termos e condições<span>.</span></h1>
+                <p class="font-2-l-b c005">Termos de uso</p>
+                <h1 class="font-1-xxl w">Termos e condições<span class="cp001">.</span></h1>
             </div>
+        </div>
+
+        <div class="termos font-2-s c010 container">
+            <h2 class="font-1-l c011">1. Política de estorno</h2>
+            <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+            <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+            <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+            <h2 class="font-1-l c011">2. Conta do usuário</h2>
+            <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+            <h2 class="font-1-l c011">3. Seguro Bikcraft</h2>
+            <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
         </div>
     </main>
 
