--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primaria" class="cabecalho-navegacao">
                 <ul class="cabecalho-navegacao-lista">
-                        <li class="cabecalho-navegacao-lista-item"><a href="#" class="cabecalho-navegacao-lista-item-botao font-1-m  w">Bicicletas</a></li>
-                        <li class="cabecalho-navegacao-lista-item"><a href="#" class="cabecalho-navegacao-lista-item-botao font-1-m w">Seguros</a></li>
-                        <li class="cabecalho-navegacao-lista-item"><a href="#" class="cabecalho-navegacao-lista-item-botao font-1-m w">Contato</a></li>
+                        <li class="cabecalho-navegacao-lista-item"><a href="bicicletas.html" class="cabecalho-navegacao-lista-item-botao font-1-m  w">Bicicletas</a></li>
+                        <li class="cabecalho-navegacao-lista-item"><a href="seguros.html" class="cabecalho-navegacao-lista-item-botao font-1-m w">Seguros</a></li>
+                        <li class="cabecalho-navegacao-lista-item"><a href="contato.html" class="cabecalho-navegacao-lista-item-botao font-1-m w">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -177,9 +177,9 @@
                     Informações
                 </h1>
                 <ul class="informacoes-lista">
-                    <li class="informacoes-lista-item font-2-m c005"><a href="#">Bicicletas</a></li>
-                    <li class="informacoes-lista-item font-2-m c005"><a href="#">Seguros</a></li>
-                    <li class="informacoes-lista-item font-2-m c005"><a href="#">Contato</a></li>
+                    <li class="informacoes-lista-item font-2-m c005"><a href="bicicletas.html">Bicicletas</a></li>
+                    <li class="informacoes-lista-item font-2-m c005"><a href="seguros.html">Seguros</a></li>
+                    <li class="informacoes-lista-item font-2-m c005"><a href="contato.html">Contato</a></li>
                     <li class="informacoes-lista-item font-2-m c005"><a href="termos.html">Termos e Condições</a></li>
                 </ul>
             </div>
