--- a/bicicletas.html
+++ b/bicicletas.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos e Condições | Bikcraft</title>
+    <title>Bicicletas | Bikcraft</title>
     <link rel="stylesheet" href="css/style.css">
-    <meta name="description" content="Termos e Condições">
+    <meta name="description" content="Bicicletas">
 </head>
-<body id="termos">
+<body>
     <header class="cabecalho">
         <div class="cabecalho-container container">
             <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
@@ -20,22 +20,93 @@
             </nav>
         </div>
     </header>
-    <main>
+
+    <main id="bicicletas">
         <div class="titulo-bg">
             <div class="titulo container">
-                <p class="font-2-l-b c005">Termos de uso</p>
-                <h1 class="font-1-xxl w">termos e condições<span class="cp001">.</span></h1>
+                <p class="font-2-l-b c005">Escolha a melhor para você</p>
+                <h1 class="font-1-xxl w">nossas bicicletas<span class="cp001">.</span></h1>
             </div>
         </div>
-        <div class="termos font-2-s c010 container">
-            <h2 class="font-1-l c011">1. Política de estorno</h2>
-            <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-            <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-            <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-            <h2 class="font-1-l c011">2. Conta do usuário</h2>
-            <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-            <h2 class="font-1-l c011">3. Seguro Bikcraft</h2>
-            <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+
+        <div class="bicicletas container">
+            <div class="bicicletas-imagem">
+                <img src="images/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                <span class="font-2-m w">R$ 4999</span>
+            </div>
+            <div class="bicicletas-conteudo">
+                <h2 class="font-1-xl">Nimbus Stark</h2>
+                <p class="font-2-s c009">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <ul class="font-1-m c009">
+                    <li>
+                        <img src="./images/icones/eletrica.svg" alt=""> Motor elétrico
+                    </li>
+                    <li>
+                        <img src="./images/icones/carbono.svg" alt=""> Fibra de carbono
+                    </li>
+                    <li>
+                        <img src="./images/icones/velocidade.svg" alt=""> 50 km/h
+                    </li>
+                    <li>
+                        <img src="./images/icones/rastreador.svg" alt=""> Rastreador
+                    </li>
+                </ul>
+                <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
+            </div>
+        </div>
+
+        <div class="bicicletas-bg">
+            <div class="bicicletas container">
+                <div class="bicicletas-imagem">
+                    <img src="images/bicicletas/magic.jpg" alt="Bicicleta preta">
+                    <span class="font-2-m w">R$ 2499</span>
+                </div>
+                <div class="bicicletas-conteudo">
+                    <h2 class="font-1-xl w">Magic Might</h2>
+                    <p class="font-2-s c006">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <ul class="font-1-m c006">
+                        <li>
+                            <img src="./images/icones/eletrica.svg" alt=""> Motor elétrico
+                        </li>
+                        <li>
+                            <img src="./images/icones/carbono.svg" alt=""> Fibra de carbono
+                        </li>
+                        <li>
+                            <img src="./images/icones/velocidade.svg" alt=""> 45 km/h
+                        </li>
+                        <li>
+                            <img src="./images/icones/rastreador.svg" alt=""> Rastreador
+                        </li>
+                    </ul>
+                    <a class="botao seta" href="./bicicletas/magic.html">Mais sobre</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="bicicletas container">
+            <div class="bicicletas-imagem">
+                <img src="images/bicicletas/nebula.jpg" alt="Bicicleta preta">
+                <span class="font-2-m w">R$ 3999</span>
+            </div>
+            <div class="bicicletas-conteudo">
+                <h2 class="font-1-xl">Nebula Cosmic</h2>
+                <p class="font-2-s c009">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <ul class="font-1-m c009">
+                    <li>
+                        <img src="./images/icones/eletrica.svg" alt=""> Motor elétrico
+                    </li>
+                    <li>
+                        <img src="./images/icones/carbono.svg" alt=""> Fibra de carbono
+                    </li>
+                    <li>
+                        <img src="./images/icones/velocidade.svg" alt=""> 40 km/h
+                    </li>
+                    <li>
+                        <img src="./images/icones/rastreador.svg" alt=""> Rastreador
+                    </li>
+                </ul>
+                <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
+            </div>
         </div>
     </main>
     <footer class="footer">
