--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nimbus | Bikcraft</title>
+    <title>Nebula | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="description" content="Termos e Condições">
 </head>
@@ -28,18 +28,18 @@
     <main class="titulo-bg">
         <div>
             <div class="titulo container">
-                <p class="font-2-xl c005">R$ 4999</p>
-                <h1 class="font-1-xxl c001">Nimbus Stark<span class="cp001">.</span></h1>
+                <p class="font-2-xl c005">R$ 3999</p>
+                <h1 class="font-1-xxl c001">Nebula Cosmic<span class="cp001">.</span></h1>
             </div>
         </div>
         <div class="bicicleta container">
             <div class="bicicleta-imagens">
+                <img src="../images/bicicleta/nimbus3.jpg" alt="">
                 <img src="../images/bicicleta/nimbus1.jpg" alt="">
                 <img src="../images/bicicleta/nimbus2.jpg" alt="">
-                <img src="../images/bicicleta/nimbus3.jpg" alt="">
             </div>
             <div class="bicicleta-conteudo">
-                <p class="font-2-l c005">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
+                <p class="font-2-l c005">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
                     <a class="botao" href="../orcamento.html">Comprar agora</a>
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <img src="../images/icones/velocidade.svg" alt="">
-                        <h3 class="font-1-m w">50 km/h</h3>
+                        <h3 class="font-1-m w">40 km/h</h3>
                         <p class="font-2-xs c006">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
                     </li>
                     <li>
@@ -93,10 +93,10 @@
                 </a>
             </li>
             <li>
-                <a href="../bicicletas/nebula.html">
-                    <img src="../images/bicicletas/nebula.jpg" alt="Bicicleta preta">
-                    <h3 class="font-1-xl">Nebula Cosmic</h3>
-                    <span class="font-2-m c008">R$ 3999</span>
+                <a href="../bicicletas/nimbus.html">
+                    <img src="../images/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m c008">R$ 4999</span>
                 </a>
             </li>
         </ul>
@@ -113,7 +113,6 @@
                 <a class="botao" href="../seguros.html">Conheça mais</a>
             </div>
         </div>
-
     </article>
     <footer class="footer">
         <div class="footer-container">
