created contato page

--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Termos e Condições">
+    <meta name="description" content="Magic Might é a bicicleta mais barata da Bikcraft.">
 </head>
 
 <body id="bicicleta">
