--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nebula | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Termos e Condições">
+    <meta name="description" content="Nebula Cosmic">
 </head>
 
 <body id="bicicleta">
