--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nimbus | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Termos e Condições">
+    <meta name="description"
+        content="Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
 </head>
 
 <body id="bicicleta">
