--- a/contato.html
+++ b/contato.html
@@ -80,19 +80,53 @@
                         <label for="telefone">Telefone</label>
                         <input type="text" id="telefone" name="telefone" placeholder="(21) 99999-9999">
                     </div>
-                    <div>
+                    <div class="col-2">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" placeholder="contato@email.com">
                     </div>
-                    <div>
+                    <div class="col-2">
                         <label for="mensagem">Mensagem</label>
                         <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
                     </div>
-                    <button class="botao">Enviar mensagem</button>
+                    <button class="botao col-2">Enviar mensagem</button>
                 </form>
             </section>
         </div>
     </main>
+    <article class="lojas container">
+        <h2 class="font-1-xxl">lojas locais <span class="cp001">.</span></h2>
+        <div class="lojas-item">
+            <img src="./images/lojas/rj.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+            <div class="lojas-conteudo">
+                <h3 class="font-1-xl">Rio de Janeiro</h3>
+                <div class="lojas-dados font-2-s c008">
+                    <p>Rua Ali Perto, 25</p>
+                    <p>Rio de Janeiro - RJ</p>
+                </div>
+                <div class="lojas-dados font-2-s c008">
+                    <a href="tel:+5521999999999">+55 21 99999-9999</a>
+                    <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+                </div>
+                <p class="lojas-tempo font-1-s"><img src="./images/icones/horario.svg" alt="">08-18h de seg à dom</p>
+            </div>
+        </div>
+        <div class="lojas-item">
+            <img src="./images/lojas/sp.jpg" alt="Mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+            <div class="lojas-conteudo">
+                <h3 class="font-1-xl">São Paulo</h3>
+                <div class="lojas-dados font-2-s c008">
+                    <p>Rua de Lá, 58</p>
+                    <p>São Paulo - SP</p>
+                </div>
+                <div class="lojas-dados font-2-s c008">
+                    <a href="tel:+5511999999999">+55 11 99999-9999</a>
+                    <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+                </div>
+                <p class="lojas-tempo font-1-s"><img src="./images/icones/horario.svg" alt="">08-18h de seg à dom</p>
+            </div>
+        </div>
+
+    </article>
     <footer class="footer">
         <div class="footer-container">
             <img src="images/bikcraft.svg" alt="Bikcraft logo">
