--- a/orcamento.html
+++ b/orcamento.html
@@ -44,10 +44,37 @@
                     <h2 class="font-1-xs c005">Escolha a sua</h2>
                     <input type="radio" name="produto" id="nimbus" value="nimbus">
                     <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+                    <div class="orcamento-detalhes">
+                        <ul class="font-1-xs c008">
+                            <li><img src="./images/icones/eletrica.svg" alt="">Motor elétrico</li>
+                            <li><img src="./images/icones/carbono.svg" alt="">Fibra de carbono</li>
+                            <li><img src="./images/icones/velocidade.svg" alt="">50 km/h</li>
+                            <li><img src="./images/icones/rastreador.svg" alt="">Rastreador</li>
+                        </ul>
+                        <img src="./images/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+                    </div>
                     <input type="radio" name="produto" id="magic" value="magic">
                     <label for="magic">Magic Might <span>R$ 2499</span></label>
+                    <div class="orcamento-detalhes">
+                        <ul class="font-1-xs c008">
+                            <li><img src="./images/icones/eletrica.svg" alt="">Motor elétrico</li>
+                            <li><img src="./images/icones/carbono.svg" alt="">Fibra de carbono</li>
+                            <li><img src="./images/icones/velocidade.svg" alt="">40 km/h</li>
+                            <li><img src="./images/icones/rastreador.svg" alt="">Rastreador</li>
+                        </ul>
+                        <img src="./images/bicicletas/magic.jpg" alt="Bicicleta preta">
+                    </div>
                     <input type="radio" name="produto" id="nebula" value="nabula">
                     <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+                    <div class="orcamento-detalhes">
+                        <ul class="font-1-xs c008">
+                            <li><img src="./images/icones/eletrica.svg" alt="">Motor elétrico</li>
+                            <li><img src="./images/icones/carbono.svg" alt="">Fibra de carbono</li>
+                            <li><img src="./images/icones/velocidade.svg" alt="">45 km/h</li>
+                            <li><img src="./images/icones/rastreador.svg" alt="">Rastreador</li>
+                        </ul>
+                        <img src="./images/bicicletas/nebula.jpg" alt="Bicicleta branca">
+                    </div>
                 </div>
                 <div class="orcamento-conteudo" id="orcamento-seguro">
                     <h2 class="font-1-xs c005">Escolha o plano</h2>
