--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="cabecalho">
         <div class="cabecalho-container container">
-            <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft"></a>
+            <a href="./index.html"><img src="images/bikcraft.svg" alt="Bikcraft" width="136" height="32"></a>
             <nav aria-label="primaria" class="cabecalho-navegacao">
                 <ul class="cabecalho-navegacao-lista">
                     <li class="cabecalho-navegacao-lista-item"><a href="bicicletas.html"
@@ -48,7 +48,7 @@
         <ul>
             <li>
                 <a href="./bicicletas/magic.html">
-                    <img src="images/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                    <img src="images/bicicletas/magic-home.jpg" alt="Bicicleta preta" width="920" height="1040">
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m c008">R$ 2499</span>
                 </a>
