--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -34,15 +34,15 @@
         </div>
         <div class="bicicleta container">
             <div class="bicicleta-imagens">
-                <img src="../images/bicicleta/nimbus3.jpg" alt="">
-                <img src="../images/bicicleta/nimbus1.jpg" alt="">
-                <img src="../images/bicicleta/nimbus2.jpg" alt="">
+                <img src="../images/bicicleta/nimbus3.jpg" alt="Bicicleta 1">
+                <img src="../images/bicicleta/nimbus1.jpg" alt="Bicicleta 2">
+                <img src="../images/bicicleta/nimbus2.jpg" alt="Bicicleta 3">
             </div>
             <div class="bicicleta-conteudo">
                 <p class="font-2-l c005">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
                 <div class="bicicleta-comprar">
-                    <a class="botao" href="../orcamento.html">Comprar agora</a>
+                    <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nebula">Comprar agora</a>
                     <span class="font-1-xs c007"><img src="../images/icones/entrega.svg" alt=""> entrega em 5
                         dias</span>
                     <span class="font-1-xs c007"><img src="../images/icones/estoque.svg" alt=""> 18 em estoque</span>
