--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <main class="introducao-container">
         <div class="introducao container w">
             <div class="introducao-conteudo">
-                <h1 class="introducao-titulo font-1-xxl">Bicicletas feitas sob medida<span class="cp001">.</span></h1>
-                <p class="introducao-paragrafo font-2-l c005">
+                <h1 class="introducao-titulo font-1-xxl fadeInLeft" data-anime="200">Bicicletas feitas sob medida<span class="cp001">.</span></h1>
+                <p class="introducao-paragrafo font-2-l c005 fadeInLeft" data-anime="300">
                     Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na
                     sua velocidade com a Bikcraft.
                 </p>
-                <a href="bicicletas.html" class="botao">Escolha a sua</a>
+                <a href="bicicletas.html" class="botao fadeInLeft" data-anime="400">Escolha a sua</a>
             </div>
             <picture class="introducao-imagem">
                 <source media="(max-width: 800px)" srcset="./images/bicicletas/nimbus.jpg">
-                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta." width="1280" height="1600">
+                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta." width="1280" height="1600" data-anime="500" class="fadeInRight">
             </picture>
         </div>
     </main>
@@ -191,6 +191,7 @@
             <p class="footer-copy font-2-m c006">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
