disabled js fixed

--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="description"
         content="Contato da Bikcraft. Entre em contato conosco para tirar dúvidas, fazer orçamentos ou dar sugestões.">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="contato">
