--- a/orcamento.html
+++ b/orcamento.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="description"
         content="Orçamento de bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente.">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="orcamento">
