--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Bicicletas">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
