--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -7,6 +7,7 @@
     <title>Magic | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="description" content="Magic Might é a bicicleta mais barata da Bikcraft.">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="bicicleta">
