--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -7,6 +7,7 @@
     <title>Nebula | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="description" content="Nebula Cosmic">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="bicicleta">
