--- a/termos.html
+++ b/termos.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="Termos e Condições">
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="termos">
