--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Bicicletas Elétricas</title>
-    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+    <meta name="description"
+        content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="css/style.min.css" as="style">
+    <link rel="stylesheet" href="css/style.min.css">
 
-  <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;1,700&family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +40,8 @@
     <main class="introducao-container">
         <div class="introducao container w">
             <div class="introducao-conteudo">
-                <h1 class="introducao-titulo font-1-xxl fadeInLeft" data-anime="200">Bicicletas feitas sob medida<span class="cp001">.</span></h1>
+                <h1 class="introducao-titulo font-1-xxl fadeInLeft" data-anime="200">Bicicletas feitas sob medida<span
+                        class="cp001">.</span></h1>
                 <p class="introducao-paragrafo font-2-l c005 fadeInLeft" data-anime="300">
                     Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na
                     sua velocidade com a Bikcraft.
@@ -41,7 +50,8 @@
             </div>
             <picture class="introducao-imagem">
                 <source media="(max-width: 800px)" srcset="./images/bicicletas/nimbus.jpg">
-                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta." width="1280" height="1600" data-anime="500" class="fadeInRight">
+                <img src="images/introducao.jpg" alt="Bicicleta elétrica preta." width="1280" height="1600"
+                    data-anime="500" class="fadeInRight">
             </picture>
         </div>
     </main>
