--- a/seguros.html
+++ b/seguros.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seguros | Bikcraft</title>
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="css/style.min.css" as="style">
+    <link rel="stylesheet" href="css/style.min.css">
     <meta name="description" content="Seguros">
-  <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;1,700&family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body id="seguros">
@@ -108,29 +115,41 @@
         <h2 class="font-1-xxl">perguntas frequentes<span class="cp001">.</span></h2>
         <dl>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="true" aria-controls="pergunta1">Qual forma de pagamento vocês aceitam?</button></dt>
-                <dd id="pergunta1" class="font-2-s c009 ativo">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-expanded="true" aria-controls="pergunta1">Qual forma de pagamento
+                        vocês aceitam?</button></dt>
+                <dd id="pergunta1" class="font-2-s c009 ativo">Aceitamos pagamentos parcelados em todos os cartões de
+                    crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta2">Como posso entrar em contato?</button></dt>
-                <dd id="pergunta2" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta2">Como posso entrar em
+                        contato?</button></dt>
+                <dd id="pergunta2" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito.
+                    Para
                     pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta3">Vocês possuem algum desconto?</button></dt>
-                <dd id="pergunta3" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta3">Vocês possuem algum
+                        desconto?</button></dt>
+                <dd id="pergunta3" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito.
+                    Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta4">Qual a garantia que possuo?</button></dt>
-                <dd id="pergunta4" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta4">Qual a garantia que
+                        possuo?</button></dt>
+                <dd id="pergunta4" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito.
+                    Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta5">Posso parcelar no boleto?</button></dt>
-                <dd id="pergunta5" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta5">Posso parcelar no
+                        boleto?</button></dt>
+                <dd id="pergunta5" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito.
+                    Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
             <div>
-                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta6">Quantas trocas posso fazer ao ano?</button></dt>
-                <dd id="pergunta6" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+                <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta6">Quantas trocas posso
+                        fazer ao ano?</button></dt>
+                <dd id="pergunta6" class="font-2-s c009">Aceitamos pagamentos parcelados em todos os cartões de crédito.
+                    Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
             </div>
         </dl>
     </article>
